# jsonkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
docs/: README.md
examples/: ai_features_demo.py  basic_usage.py
src/jsonkit/: __init__.py
src/jsonutilkit/: __init__.py  ai_processor.py  cleaner.py  core.py  extractor.py  schema_generator.py  transformer.py  validator.py
tests/: test_ai_processor.py  test_cleaner.py  test_core.py  test_extractor.py  test_parser.py  test_schema_generator.py  test_transformer.py  test_validator.py
